--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,9 @@
         "semi": [
             "error",
             "never"
-        ]
+        ],
+		"@typescript-eslint/explicit-module-boundary-types": [
+			"never"
+		]
     }
 }
